--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@react-svgicon/header": ["libs/header/src/index.ts"],
       "@react-svgicon/svg-icon": ["libs/svg-icon/src/index.ts"]
     }
   },
